--- a/mtmstyle.css
+++ b/mtmstyle.css
@@ -66,7 +66,7 @@ section{
 }
 .home{
     height: 100vh;
-    background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url('images/hero.webp') no-repeat;
+    background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url('images/heroimg.jpg') no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -223,7 +223,7 @@ section{
 .works .box-container .box:hover .image .content{
     transform: translateY(0);
 }.testimonial{
-    background: var(--light-bg);
+    background: var(--white);
 }
 .contact{
     background: var(--light-bg);
@@ -493,9 +493,6 @@ font-weight: 500;
 }
 
 @media screen and (max-width: 960px) {
-    .home h1{
-        margin-top: 4rem;
-    }
 	.pe{
 		width: 45%;
 	}
