--- a/mtmstyle.css
+++ b/mtmstyle.css
@@ -397,7 +397,17 @@ gap: 1rem;    }
     }
   }
   
+  @media (max-width: 400px) {
 
+    .home{
+        background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url('images/heroimg.jpg') no-repeat;
+        background-size:auto auto;
+        background-position: center;
+    
+    }
+      }
+    
+    
   @media screen and (max-width: 300px) {
 	.home{
         height: 100vh;
